--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'variables';
+@import '../node_modules/bootstrap/scss/bootstrap';
+@import '../node_modules/font-awesome/scss/font-awesome';
+html, body {
+    background: url("assets/coffee_beans.jpg") top center fixed no-repeat;
+    -webkit-background-size: 100% 100vh;
+    -moz-background-size: 100% 100vh;
+    -o-background-size: 100% 100vh;
+    background-size: 100% 100vh;
+
+}
+.float-left {
+    float: left;
+}
+.float-right {
+    float: right;
+}
