--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,3 +1,7 @@
 $icon-font-path: '../node_modules/bootstrap-sass/assets/fonts/bootstrap/';
 $fa-font-path : '../node_modules/font-awesome/fonts';
 $card-columns-count : 3;
+$link-color: lightgrey;
+$nav-tabs-link-active-color: white;
+$nav-tabs-link-active-border-color: transparent;
+$nav-tabs-link-hover-border-color: transparent;
