added navbar component

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="container-fluid">
     <div class="row dashboard-row text-light">
         <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
