added text and new navbar

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -19,4 +19,23 @@
             </div>
         </div>
     </div>
+    <div class="row dashboard-row text-light">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+            <p class="h1">Willkommen in der Kaffeeecke</p>
+            <p class="lead">Deiner Webseite um die Kaffeekasse zu verwalten</p>
+            <dl>
+                <dt>Kaffeeecke</dt>
+                <dd>Erstelle dir deine Kaffeeecke</dd>
+                <dt>Kaffeejunkys</dt>
+                <dd>Verwalte deine Junkys
+                    <ul>
+                        <li>Anzahl der getruknene Tassen</li>
+                        <li>Offener Betrag</li>
+                    </ul>
+                </dd>
+                <dt>Konto</dt>
+                <dd>Sehe immer den aktuellen Kontostand deiner Kasse</dd>
+            </dl>
+        </div>
+    </div>
 </div>
