added cup model and cup images

--- a/src/app/coffeecorner/coffeecorner.component.scss
+++ b/src/app/coffeecorner/coffeecorner.component.scss
@@ -5,6 +5,6 @@ $bg-coffee : #7C5852;
 .card {
     margin: 0.5rem 0;
     padding: 0.25rem;
-    background-color: $bg-coffee;
+    background-color: rgba( 124,88,82,0.75);
     border: 1px solid white;
 }
