--- a/src/app/coffeecorner/coffeecorner.component.html
+++ b/src/app/coffeecorner/coffeecorner.component.html
@@ -5,7 +5,7 @@
 </nav>
 <div class="container-fluid">
   <div class="card-columns">
-    <div class="card text-white bg-coffee" *ngFor="let junky of junkys">
+    <div class="card text-white" *ngFor="let junky of junkys">
       <app-junky [price]="0.25" [junky]="junky"></app-junky>
     </div>
   </div>
