--- a/src/app/coffeecorner/junky/junky.component.html
+++ b/src/app/coffeecorner/junky/junky.component.html
@@ -1,17 +1,19 @@
 <div class="card-body" *ngIf="junky">
-  <span class="float-right"><i class="fa fa-trash" aria-hidden="true"></i></span>
   <div class="container-fluid">
     <div class="row align-items-center">
-      <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
         <p class="h6">{{junky.name}} </p>
-        <p class="h6">{{junky.score}} <i class="fa fa-coffee" aria-hidden="true"></i> </p>
-        <p class="h6">{{junky.score*price}} <i class="fa fa-eur" aria-hidden="true"></i></p>
+        <p class="h6">{{junky.cups.length}} <i class="fa fa-coffee" aria-hidden="true"></i> </p>
+        <p class="h6">{{junky.cups.length*price}} <i class="fa fa-eur" aria-hidden="true"></i></p>
       </div>
-      <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 text-center">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+        <img src="assets/cups/{{junky.image}}.jpg" class="img-fluid" /><br><br>
+      </div>
+      <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 text-center">
         <i class="fa fa-credit-card fa-5x" aria-hidden="true"></i><br>
         <small>bezahlen</small>
       </div>
-      <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 text-center">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 text-center">
         <i class="fa fa-plus-circle fa-5x" aria-hidden="true"></i><br>
         <small>Tasse hinzufügen</small>
       </div>
